<resources>
    <string name="app_name">Vocabulary</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="choose_quiz_type">Choose Quiz type</string>
    <string name="like_this_app">Like this app</string>
    <string name="exit">Exit</string>
    <string name="setting">Setting</string>
    <string name="quiz">Quiz</string>
    <string name="title_section1">Title Section 1</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="result">Result</string>
    <string name="congra">Congratulation</string>
    <string name="what_is">What is</string>
    <string name="is">______ is</string>
    <string name="no_question">No Questions Found</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="notification">Notification</string>
    <string name="reminder">Reminder</string>
    <string name="when">When</string>
    <string name="interval">Interval</string>
    <string name="settings">Settings</string>
    <string name="quiz_type">Quiz Type</string>
    <string name="word">Word</string>
    <string name="meaning">Meaning</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="fetch_meaning">Fetch meaning</string>
    <string name="night_mode">Night Mode</string>
    <string name="a_notification_icon">A notification icon</string>
    <string name="an_interval_icon">An interval icon</string>
    <string name="a_night_mode_icon">A night mode icon</string>
    <string name="a_font_icon">A font icon</string>
    <string name="font">Font</string>
    <string name="confirm">Confirm</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="home">Home</string>
    <string name="edit">Edit</string>
    <string name="editWord">Edit a word</string>
    <string name="search">Search</string>
    <string name="search_hint">Type name...</string>
    <string name="save_a_word">Save a word</string>
    <string name="insert_a_word">Insert a Word</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="adjective_shortened">adj</string>
    <string name="a_search_button">A search button</string>
    <string name="write_a_word">write a word</string>
    <string name="a_cancel_button">a cancel button</string>
    <string name="a_pause_button">A pause button</string>
    <string name="choose">Choose</string>
    <string name="save_score">Save Score button</string>
    <string name="quiz_restart_button">Quiz restart button</string>
    <string name="go_back_to_home">Go Back To Home</string>
    <string name="score">Score</string>
    <string name="took">Took: </string>
    <string name="vocabulary_v1_0">Vocabulary V1.0</string>
    <string name="setting_icon">Setting Icon</string>
    <string name="quiz_icon">Quiz Icon</string>
    <string name="rating_icon">Rating Icon</string>
    <string name="power_off_icon">Power Off Icon</string>
    <string name="incorrect">Incorrect</string>
    <string name="multiselect">MultiSelect</string>
    <string name="floating_widget">Floating Widget</string>
    <string name="enable_floating_widget">Enable Floating Widget</string>
    <string name="connection_problem">Connection Problem, Please try again.</string>
    <string name="rating">Rating</string>
    <string name="sort_by">Sort By</string>
    <string name="cache">Cache</string>
    <string name="an_exit_button">An exit button</string>
    <string name="a_search_icon">A search icon</string>
    <string name="time_up">Time\'s Up!</string>
    <string name="a_clock_icon">An icon to describe when the notification is launched.</string>
    <string name="delete">Delete</string>
    <string name="related_words">Find related words</string>
    <string name="delete_the_cached_word">Delete the cached word</string>
    <string name="delete_cached_word">Delete Cached</string>
    <string name="title_activity_maps">Map</string>
    <string name="self_deletion">Self Deletion</string>
    <string name="word_deletion">Deletion of Words after</string>
    <string name="days">days</string>
    <string name="sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="words_that_rhyme_with">Words that rhyme with</string>
    <string name="words_that_are_strongly_associated_with">Words that are strongly associated with</string>
    <string name="words_that_are_spelled_similarly_to">Words that are spelled similarly to</string>
    <string name="words_that_sound_like">Words that sound like</string>
</resources>
