<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="?attr/backgroundColor"
    android:layout_gravity="center">

    <LinearLayout
        android:id="@+id/hori_line_top"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:background="?attr/iconColor"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/high_score_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textColor="?attr/textColor"
        app:layout_constraintEnd_toEndOf="@id/high_score"
        app:layout_constraintStart_toStartOf="@id/high_score"
        app:layout_constraintTop_toBottomOf="@id/high_score" />

    <!--<Button-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="30dp"-->
    <!--app:layout_constraintTop_toBottomOf="@id/high_score_title"/>-->


    <TextView
        android:id="@+id/high_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/textColor"
        android:textSize="50sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hori_line_top" />

    <TextView
        android:id="@+id/no_of_seconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/textColor"
        android:layout_margin="4dp"
        android:padding="8dp"
        android:text="@string/took"
        app:layout_constraintEnd_toStartOf="@id/high_score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hori_line_top"/>

    <ImageButton
        android:id="@+id/exit_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/high_score_title"
        app:layout_constraintEnd_toStartOf="@+id/restart_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="8dp"
        android:padding="4dp"
        app:srcCompat="@drawable/ic_clear"
        android:contentDescription="@string/go_back_to_home"/>

    <ImageButton
        android:id="@+id/done_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/high_score_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/restart_icon"
        android:tint="@color/leaf_green"
        android:layout_margin="8dp"
        app:srcCompat="@drawable/ic_play_arrow_black_24dp"
        android:padding="4dp"
        android:contentDescription="@string/save_score"/>


    <ImageButton
        android:id="@+id/restart_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="?attr/iconColor"
        android:background="?android:selectableItemBackground"
        app:layout_constraintEnd_toStartOf="@+id/done_icon"
        app:layout_constraintStart_toEndOf="@+id/exit_icon"
        app:layout_constraintTop_toBottomOf="@id/high_score_title"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="8dp"
        android:padding="4dp"
        app:srcCompat="@drawable/ic_refresh"
        android:contentDescription="@string/quiz_restart_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>